fix: toDSL 转义